# LearnOpenGL

./: CMakeLists.txt  main.cpp
asset/: default.frag  default.vert  light.vert
include/: camera.h  mesh.h  model.h  render.h  shader.h  texture.h
include/glad/: glad.h
src/: camera.cpp  glad.c  mesh.cpp  model.cpp  render.cpp  shader.cpp  texture.cpp
